[build-system]
requires = ["setuptools>=75.6.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hocker"
version = "1.0.6"
authors = [
  { name="Lucas Warwick", email="lucaswarwick02@gmail.com" },
  { name="Evan Gray", email="evanscottgray@gmail.com" },
]
description = "Python package for combining .hocr files and images into searchable PDFs, fork of original by Lucas Warwick."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "reportlab==4.4.0",
    "pillow==11.3.0",
]

[project.urls]
"Homepage" = "https://github.com/evanscottgray/HOCkeR"
"Bug Tracker" = "https://github.com/evanscottgray/HOCkeR/issues"
